Fixed some typos removed .swp

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
     <head>
     </head>
     <body>
+        <h1>MongoDB configuration generator</h1>
+        <p>More of a proof of concept. Therefore there is really no bounds checking, input
+        validation, or testing. If people like the idea or it's helpful to others and myself 
+        I'll update it.</p>
+
         <form name="config" method="post" action="/generate">
             <p>Filename: <input type="text" name="filename" placeholder="mongo" required autofocus>
             conf: <input type="radio" name="ext" value="conf" checked>
