fixed some unclosed tags

--- a/public/index.html
+++ b/public/index.html
@@ -162,8 +162,8 @@
             <h3>Process Managment:</h3>
             <p>Service Name: <input type="text" name="windowsServiceName"></p>
             <p>Display Name: <input type="text" name="windowsDisplayName"></p>
-            <p>Description: <input type="text" name="windowsServiceDescription"</p>
-            <p>Service User: <input type="text" name="windowsServiceUser"</p>
+            <p>Description: <input type="text" name="windowsServiceDescription"></p>
+            <p>Service User: <input type="text" name="windowsServiceUser"></p>
             <p>Service Password: <input type="password" name="windowsServicePwd"</p>
 
             <p><input type="submit" value="Generate"></p>
